# alleigen

./: CMakeLists.txt  LICENSE  README.md  allegro_utils.cc  allegro_utils.h  main.cpp  read_image.cc
